--- a/package.json
+++ b/package.json
@@ -8,25 +8,36 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "npm run lint:script && npm run lint:style",
-    "lint:script": "eslint --ext .js,.ts,.vue --fix --quiet ./src",
+    "lint:script": "eslint --ext .js,.ts,.tsx,.vue --fix --quiet ./src",
     "lint:style": "stylelint --fix \"src/**/*.{css,less,vue}\"",
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@idux/cdk": "^1.12.4",
+    "@idux/components": "^1.12.4",
+    "@idux/pro": "^1.12.4",
     "less": "^4.2.0",
-    "vue": "^3.3.11"
+    "pinia": "^2.1.7",
+    "pinia-plugin-persist": "^1.0.0",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "autoprefixer": "^10.4.16",
+    "commitlint": "^18.4.4",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "^9.19.2",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.1.1",
@@ -39,7 +50,9 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-stylelint": "^5.3.1",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.8.25"
   },
   "lint-staged": {
