--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "vite": "^5.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-static-copy": "^1.0.0",
     "vite-plugin-stylelint": "^5.3.1",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.8.25"
