--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,9 +42,9 @@
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
-    "src/views/Home/index.tvue"
+    "src/**/*.vue"
   ],
   "references": [
     {
