--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylelint-config-standard-less": "^3.0.1",
     "stylelint-prettier": "^5.0.0",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-imagemin": "^0.6.1",
