--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "npm run lint:script && npm run lint:style",
     "lint:script": "eslint --ext .js,.ts,.tsx,.vue --fix --quiet ./src",
     "lint:style": "stylelint --fix \"src/**/*.{css,less,vue}\"",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "test": "vitest"
   },
   "dependencies": {
     "@idux/cdk": "^1.12.4",
@@ -20,6 +21,7 @@
     "less": "^4.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
+    "vite-plugin-mock": "^3.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
@@ -39,6 +41,7 @@
     "eslint-plugin-vue": "^9.19.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "mockjs": "^1.1.0",
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.1.1",
@@ -56,6 +59,7 @@
     "vite-plugin-static-copy": "^1.0.0",
     "vite-plugin-stylelint": "^5.3.1",
     "vite-svg-loader": "^5.1.0",
+    "vitest": "^1.1.3",
     "vue-tsc": "^1.8.25"
   },
   "lint-staged": {
